RESOLVED FIXED299640
[Site Isolation] Fix inspector test failures
https://bugs.webkit.org/show_bug.cgi?id=299640
Summary [Site Isolation] Fix inspector test failures
Basuke Suzuki
Reported 2025-09-26 16:11:11 PDT
Tests seem failing because the web view for Web Inspector itself is created as SiteIsolationEnabled=true. I didn’t dig deeper than that but I cannot imagine any reason we need to enable Site Isolation on Web Inspector view.
Attachments
Basuke Suzuki
Comment 1 2025-09-26 16:11:40 PDT
Basuke Suzuki
Comment 2 2025-09-26 16:14:48 PDT
EWS
Comment 3 2025-09-26 23:55:32 PDT
Committed 300625@main (aa513ce79a0f): <https://commits.webkit.org/300625@main> Reviewed commits have been landed. Closing PR #51414 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.