[Site Isolation] Fix inspector test failures https://bugs.webkit.org/show_bug.cgi?id=299640 rdar://161362146

Reviewed by Devin Rousso.

Tests are failing because the web view for Web Inspector itself is created as SiteIsolationEnabled=true.
WebView should have Site Isolation disabled on Web Inspector view.

No new tests. The test result should be same with before.

* Source/WebKit/UIProcess/Inspector/mac/WKInspectorViewController.mm:
(-[WKInspectorViewController webViewConfiguration]):

Canonical link: https://commits.webkit.org/300625@main